@@ -1,5 +1,14 @@
 2015-12-10  Csaba Osztrogonác  <ossy@webkit.org>
 
+        [B3] Make GCC ignore warnings in FTLB3Output.h
+        https://bugs.webkit.org/show_bug.cgi?id=152124
+
+        Reviewed by Mark Lam.
+
+        * ftl/FTLB3Output.h:
+
+2015-12-10  Csaba Osztrogonác  <ossy@webkit.org>
+
         [EFL] Remove the unused IncrementalSweeper::m_isTimerFrozen member after r193749
         https://bugs.webkit.org/show_bug.cgi?id=152127
 
